AAP-20343: Created docs for post GA bot improvements feature (#1090)
* AAP-20343: Created docs for post GA bot improvements feature

* AAP-20343: Created docs for post GA bot improvements feature and incorporated feedback

--- a/lightspeed/assemblies/assembly_using-code-bot-for-suggestions.adoc
+++ b/lightspeed/assemblies/assembly_using-code-bot-for-suggestions.adoc
@@ -4,22 +4,25 @@ ifdef::context[:parent-context: {context}]
 
 [id="using-code-bot-for-suggestions_{context}"]
 
-= Installing and configuring Ansible code bot
+= Installing and configuring the {AnsibleCodeBot}
 
 :context: using-code-bot-for-suggestions
 
 [role="_abstract"]
 
-The {AnsibleCodeBot} scans existing content collections, roles, and playbooks hosted in GitHub repositories, and proactively creates pull requests whenever best practices or quality improvement recommendations are available. The bot automatically submits pull requests to the repository, which proactively alerts the repository owner to a recommended change to their content . You can configure {AnsibleCodeBot} to scan your existing Git repositories (both public and private). Your organization must have an active subscription to {PlatformName} to use {AnsibleCodeBot}. 
+The {AnsibleCodeBot} scans existing content collections, roles, and playbooks hosted in GitHub repositories, and proactively creates pull requests whenever best practices or quality improvement recommendations are available. 
 
-{AnsibleCodeBot} scans your code repositories to recommend code quality improvements. It promotes Ansible best practices while avoiding common errors that can lead to bugs or make code harder to maintain. 
+{AnsibleCodeBot} scans your code repositories to recommend code quality improvements. It promotes Ansible best practices while avoiding common errors that can lead to bugs or make code harder to maintain. The bot automatically submits pull requests to the repository, which proactively alerts the repository owner to a recommended change to their content. You can configure {AnsibleCodeBot} to scan your existing Git repositories (both public and private). Your organization must have an active subscription to {PlatformName} to use the {AnsibleCodeBot}. 
+
+After you install the {AnsibleCodeBot}, you can access the {AnsibleCodeBot} dashboard that displays all your repositories that have the bot installed along with their scan status. From the dashboard, you can start a manual scan, view the scan history, and view the repository. From GitHub, you can configure a schedule to scan your repository at regular intervals, and add or remove a repository from being scanned. For more information, see xref:manage-repo-scans_using-code-bot-for-suggestions[Managing repository scans]. 
 
 [IMPORTANT]
 ====
-* {LightspeedShortName} provides {AnsibleCodeBot} in Service Preview, that you can deploy to your GitHub account. 
-* {AnsibleCodeBot} is supported on the following GitHub versions:
-** GitHub.com
-** GitHub Enterprise Cloud
+
+{AnsibleCodeBot} is supported on the following GitHub versions:
+
+* GitHub.com
+* GitHub Enterprise Cloud
 +
 {AnsibleCodeBot} is not supported on GitHub Enterprise Server. For more information, see link:https://docs.github.com/en/enterprise-cloud@latest/get-started/learning-about-github/githubs-plans[GitHub's plans] in the GitHub documentation. 
 ====
@@ -36,17 +39,16 @@ The following examples are code recommendations that the {AnsibleCodeBot} can su
 * Fixing casing issues in name fields
 
 include::modules/proc_install-code-bot.adoc[leveloffset=+1]
-include::modules/proc_configure-repo-scan.adoc[leveloffset=+1]
-include::modules/proc_manually-scan-repo.adoc[leveloffset=+1]
+include::modules/con-manage-repo-scans.adoc[leveloffset=+1]
 
 [[ansible-code-bot-duplicate-pr]]
 == How {AnsibleCodeBot} handles duplicate pull requests
 
 * If {AnsibleCodeBot} has created a pull request on the latest commit default branch, it does not scan the repository. The bot skips scanning the repository because the pull request was committed on the latest default branch, and no new commit was made after that pull request. 
 
-* If there is an existing pull request that is not on the latest commit default branch, Ansible code bot does a pull request difference to compare the changes in both the branches. The following scenarios are possible:
-** *There is no difference in the existing and new scan results*: Ansible code bot does not push the scan results as a new pull request. 
-** *There are differences found in the existing and the new scan results*: {AnsibleCodeBot} creates a new pull request. The newly-created pull request does not close the existing pull request, against which the pull request difference was noted. This behavior makes it easier for the repository administrator to review only the latest pull request created by the {AnsibleCodeBot}, and the administrator can avoid reviewing the older pull requests created by the bot. If required, the administrator can close the older pull requests.
+* If there is an existing pull request that is not on the latest commit default branch, the {AnsibleCodeBot} does a pull request difference to compare the changes in both branches. The following scenarios are possible:
+** *There is no difference in the existing and new scan results*: {AnsibleCodeBot} does not push the scan results as a new pull request. 
+** *There are differences found in the existing and the new scan results*: the {AnsibleCodeBot} creates a new pull request. The newly-created pull request does not close the existing pull request, against which the pull request difference was noted. This behavior makes it easier for the repository administrator to review only the latest pull request created by the {AnsibleCodeBot}, and the administrator can avoid reviewing the older pull requests created by the bot. If required, the administrator can close the older pull requests.
 
 ifdef::parent-context[:context: {parent-context}]
 ifndef::parent-context[:!context:]
