--- a/lightspeed/modules/proc_manually-scan-repo.adoc
+++ b/lightspeed/modules/proc_manually-scan-repo.adoc
@@ -4,32 +4,45 @@
 
 = Manually scanning your Git repositories
 
-You can manually scan your Git repositories if you did not set up a scanning schedule for your {AnsibleCodeBot} or if you do not want to wait for the next scheduled scan.
+You can manually scan your Git repositories if you did not set up a scanning schedule for your {AnsibleCodeBot} or if you do not want to wait for the next scheduled scan. If you manually scan your repository, and no pull request was created, it is likely so because a duplicate pull request already exists. You can scan your repository from both the {AnsibleCodeBot} dashboard and GitHub.
 
-If the avoid duplicate PRs condition is not met, then a manual scan results in a new PR with all the necessary Ansible code bot recommendations.
-
-Following are the avoid duplicate conditions: 
-
-* Verify that the {AnsibleCodeBot} pull request (PR) already exists, and is on the latest commit main branch. If this condition is met, you can skip the scan.
-* If there is an existing PR but it is not on the latest commit branch, the Ansible code bot takes a PR difference. If there is no difference, then the bot skips pushing the scan results as a new pull request.
+== Manually scanning the repository from the {AnsibleCodeBot}  dashboard
 
 .Procedure
+. Log in to the link:https://bot.ai.ansible.redhat.com/console[{AnsibleCodeBot} dashboard]. 
++
+The *Repositories* list displays a list of repositories that you selected for scanning. 
++
+NOTE: If you do not see your repository in the *Repositories* list, you can add it for scanning. For more information, see xref:add-remove-repo-from-scans_using-code-bot-for-suggestions[Adding or removing repositories from the {AnsibleCodeBot}].
 
+. To start a manual scan of your repository, click the *Ellipsis* icon (image:ansible-code-bot-dashboard-kebab-icon.png[Ellipsis icon]) beside the repository that you want to scan and select *Scan now*.
+
+. Click *Refresh* to view the status of the scan job.
+
+. To view more details about your repository scans, click the *Ellipsis* icon (image:ansible-code-bot-dashboard-kebab-icon.png[Ellipsis icon]) beside the repository and select *View scan history*.
++
+The repository's scan history is displayed along with the scan start time, scan status, type of scan (scheduled or manual), link to the pull request if it was created, and the log message if the scan failed. 
+
+. To view your repository on GitHub, click the *Ellipsis* icon (image:ansible-code-bot-dashboard-kebab-icon.png[Ellipsis icon]) beside the repository and select *View repository*. 
+
+== Manually scanning the repository from GitHub
+
+.Procedure
 . In GitHub, go to the main page of the repository that you want to scan.
 . To modify the repository settings, click the *Settings* icon beside the *About* area. 
 . In the *Topics* field, enter the keyword topic *ansible-code-bot-scan* to the repository. 
 +
 The following illustration shows the keyword topic for starting a manual scan:
 +
-image::lightspeed-ansible-code-bot-manual-trigger-setting.png[Ansible code bot settings]
+image::lightspeed-ansible-code-bot-manual-trigger-setting.png[{AnsibleCodeBot} settings]
 +
 . Click *Save changes*. 
 +
 Based on the repository webhook event, {AnsibleCodeBot} starts a manual scan of your repository.
-If the avoid duplicate pull requests condition is not met, then the manual scan results in a new pull request with all the necessary Ansible code bot recommendations. 
+If the avoid duplicate pull requests condition is not met, then the manual scan results in a new pull request with all the necessary {AnsibleCodeBot} recommendations. 
 
 [role="_additional-resources"]
 .Additional resources
 
-* xref:troubleshooting-code-bot_troubleshooting-lightspeed[Troubleshooting Ansible code bot errors]
+* xref:troubleshooting-code-bot_troubleshooting-lightspeed[Troubleshooting {AnsibleCodeBot} errors]
 
