Create sections 3, 4, 5, 6, and 7 of controller API guide
Adding content for sections 3, 4, 5, 6, and 7

Create sections 3, 4, 5, 6, and 7 of the Automation Controller API Guide

https://issues.redhat.com/browse/AAP-21476

Affects `titles/controller-api-guide`

--- a/downstream/assemblies/platform/assembly-controller-api-filter.adoc
+++ b/downstream/assemblies/platform/assembly-controller-api-filter.adoc
@@ -2,4 +2,8 @@
 
 = Filtering in the API
 
-Any collection is what the system calls a “queryset” and can be filtered using various operators.
+Any collection is what the system calls a "queryset" that you can filter by using various operators.
+
+include::platform/proc-controller-api-filtering.adoc[leveloffset=+1]
+include::platform/ref-controller-api-advanced-queries.adoc[leveloffset=+1]
+include::platform/ref-controller-api-field-lookups.adoc[leveloffset=+1]
