AAP-18707 Removed max activations info from code section to appendix for EDA controller

--- a/downstream/modules/platform/ref-eda-controller-variables.adoc
+++ b/downstream/modules/platform/ref-eda-controller-variables.adoc
@@ -58,4 +58,8 @@ Default = `automationedacontroller`.
 | *`automationedacontroller_rq_workers`* | Number of Redis Queue (RQ) workers used by {EDAcontroller}. RQ workers are Python processes that run in the background.
 
 Default =  (# of cores or threads) * 2 + 1
-|====
+| *`automationedacontroller_max_running_activations`* | The number of running activations per worker.
+
+Default = 12
+|
+====
