AAP-18653-updates: Added telemetry data collection notice and release notes updates

--- a/lightspeed/titles/lightspeed-release-notes/modules/lightspeed-rn-7march2024.adoc
+++ b/lightspeed/titles/lightspeed-release-notes/modules/lightspeed-rn-7march2024.adoc
@@ -7,11 +7,11 @@ This release includes several enhancements, additions, and fixes that have been 
 
 == New features and enhancements 
 
-* *Availability of {AnsibleCodeBot} Technology Preview as a General Availability release*
+* *{AnsibleCodeBot} General Availability*
 +
-Previously, {LightspeedShortName} provided the {AnsibleCodeBot} as a Technology Preview release. Now the {AnsibleCodeBot} is available as General Availability release along with improved performance and an {AnsibleCodeBot} dashboard. 
+Previously, {LightspeedShortName} provided the {AnsibleCodeBot} as a Technology Preview release. Now, the {AnsibleCodeBot} is available as General Availability release along with an improved performance and an {AnsibleCodeBot} dashboard. 
 +
-The dashboard displays a list of your repositories where the code bot is installed, and indicates if the scan schedule is not set, or is set to manual or scheduled scan. From the dashboard, you can start a manual scan, view the scan history, and view the repository. 
+The dashboard displays a list of your repositories where the code bot is installed, the status of your repository scans, and indicates whether the scan schedule is not set, or is set to manual or scheduled scan. From the dashboard, you can start a manual scan, view the scan history, and view the repository. 
 +
 
 * *Ability to collect and manage the Admin dashboard telemetry*
