--- a/lightspeed/modules/con_training-data.adoc
+++ b/lightspeed/modules/con_training-data.adoc
@@ -6,13 +6,7 @@
 
 == Models
 
-{LightspeedFullName} uses Ansible-specific IBM watsonx Granite models unique to your organization. These models are provided, managed, and maintained by IBM. You can use the Ansible-specific IBM watsonx Granite model as the default model for {LightspeedShortName}, so that all Ansible Lightspeed users in your organization can use the fine-tuned model. 
-
-You can configure {LightspeedShortName} to use one of the following models:
-
-* *Base model*: A default model that enables all users in your organization to use generative AI with {LightspeedShortName}.
-
-* *Custom model*: A custom model that is fine-tuned on your organizational automation data to improve the code recommendation experience. You can configure custom models for select Ansible users or for all users in your organization. For more information, see xref:configuring-custom-models_lightspeed-user-guide[Configuring custom models]. 
+{LightspeedFullName} uses Ansible-specific IBM watsonx Granite models unique to your organization. These models are provided, managed, and maintained by IBM.
 
 == Data sources
 
