--- a/downstream/modules/platform/proc-controller-api-filtering.adoc
+++ b/downstream/modules/platform/proc-controller-api-filtering.adoc
@@ -16,7 +16,7 @@ http://<controller server name>/api/v2/groups/?name__contains=foo
 http://<controller server name>/api/v2/groups/?name=foo
 ----
 +
-* If a resource is of an integer type, you must add `\_\_int` to the end to cast your string input value to an integer, like the following:
+* If a resource is of an integer type, you must add `\_\_int` to the end to cast your string input value to an integer, such as the following:
 +
 [literal, options="nowrap" subs="+attributes"]
 ----
@@ -38,7 +38,7 @@ This returns all users with names that include the string "Kim" in them.
 ----
 http://<controller server name>/api/v2/groups/?name__icontains=test&has_active_failures=false
 ----
-This finds all groups containing the name “test” that have no active failures.
+This finds all groups containing the name "test" that have no active failures.
 
 .Additional resources
 
