--- a/downstream/modules/platform/ref-controller-api-field-lookups.adoc
+++ b/downstream/modules/platform/ref-controller-api-field-lookups.adoc
@@ -31,7 +31,7 @@ The following field lookups are supported:
 
 For example, `?created__gte=2023-01-01` provides a list of items created after 1/1/2023.
 
-You can specify null values can as `None` or `Null` (both case-insensitive), though it we recommend to use the `isnull` lookup to explicitly check for null values.
+You can specify null values as `None` or `Null` (both case-insensitive), though we recommend using the `isnull` lookup to explicitly check for null values.
 
 You can specify lists (for the `in` lookup) as a comma-separated list of values.
 Filtering based on the requesting user's level of access by query string parameter:
