--- a/downstream/assemblies/platform/assembly-controller-api-filter.adoc
+++ b/downstream/assemblies/platform/assembly-controller-api-filter.adoc
@@ -2,7 +2,8 @@
 
 = Filtering in the API
 
-Any collection is what the system calls a "queryset" that you can filter by using various operators.
+The system recognizes a collection as a "queryset".
+You can filter this by using various operators.
 
 include::platform/proc-controller-api-filtering.adoc[leveloffset=+1]
 include::platform/ref-controller-api-advanced-queries.adoc[leveloffset=+1]
