--- a/downstream/modules/platform/proc-controller-api-using-pagination.adoc
+++ b/downstream/modules/platform/proc-controller-api-using-pagination.adoc
@@ -11,7 +11,7 @@ When you receive the result for a collection, something similar to the following
 
 . Request the page given by the "next" sequential URL, to get to the next page.
 . Use the `page_size=XX` query string parameter to change the number of results returned for each request.
-** The `page_size` has a default maximum limit configured to 200, which is enforced when a user tries a value beyond it, for example, `?page_size=1000`. 
+** The `page_size` has a default maximum limit of 200, which is enforced when a user tries a value beyond it, for example, `?page_size=1000`. 
 However, you can change this limit by setting the value in `/etc/tower/conf.d/<some file>.py` to something higher. For example, `MAX_PAGE_SIZE=1000`.
 . Use the page query string parameter to retrieve a particular page of results:
 +
@@ -22,6 +22,6 @@ http://<server name>/api/v2/model_verbose_name?page_size=100&page=2
 
 The preceding and following links returned with the results set these query string parameters automatically.
 
-We recommend that you do not request page sizes beyond a couple of hundred.
+Do not request page sizes greater than 200.
 
 The user interface uses smaller values to avoid scrolling.
