--- a/downstream/modules/platform/con-building-an-execution-environment-in-a-disconnected-environment.adoc
+++ b/downstream/modules/platform/con-building-an-execution-environment-in-a-disconnected-environment.adoc
@@ -16,7 +16,7 @@ link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_pl
 
 * registry.redhat.io for access to the base container images.
 
-* Red Hat does not have an IP list for the container registry domains or cdn-ubi.redhat.com as for for cdn.redhat.com. 
+* Red Hat does not have an IP list for the container registry domains or cdn-ubi.redhat.com as for cdn.redhat.com. 
 To firewall off the registry and/or UBI repositories, use a proxy (e.g. squid) and allow-list the following domains:
 
 * `registry.access.redhat.com`
@@ -28,6 +28,8 @@ To firewall off the registry and/or UBI repositories, use a proxy (e.g. squid) a
 * `cdn01.quay.io`
 * `cdn02.quay.io`
 * `cdn03.quay.io`
+
+For additional information, see link:https://access.redhat.com/articles/1525183[Public CIDR Lists for Red Hat].
 
 Mirrored PyPI content once transferred into the disconnected network can be made available using a web server or an artifact repository like Nexus.  The RHEL and UBI repository content can be exported from an internet-facing Red Hat Satellite server, copied into the disconnected environment, then imported into a disconnected Satellite so it is available for building custom {ExecEnvShort}s.  See link:https://access.redhat.com/documentation/en-us/red_hat_satellite/6.14/html-single/installing_satellite_server_in_a_disconnected_network_environment/index#iss_export_sync_in_an_air_gapped_scenario[ISS Export Sync in an Air-Gapped Scenario] for details.
 
