--- a/downstream/assemblies/platform/assembly-controller-api-auth-methods.adoc
+++ b/downstream/assemblies/platform/assembly-controller-api-auth-methods.adoc
@@ -1,10 +1,16 @@
 [id="controller-api-auth-methods"]
 
-= Authentication methods using the API
+= Authenticating in the API
 
 You can use the following authentication methods in the API:
 
-* Session authentication
+* xref:controller-api-session-auth[Session authentication]
 * Basic authentication
 * OAuth 2 token authentication
 * Single Sign-On authentication
+
+{ControllerNameStart} is designed for organizations to centralize and control their automation with a visual dashboard for out-of-the box control while providing a REST API to integrate with your other tools on a deeper level. 
+{ControllerNameStart} supports several authentication methods to make it easy to embed {ControllerName} into existing tools and processes to help ensure the right people can access controller resources.
+
+include::platform/proc-controller-api-session-auth.adoc[leveloffset=+1]
+
