--- a/downstream/modules/platform/ref-eda-controller-variables.adoc
+++ b/downstream/modules/platform/ref-eda-controller-variables.adoc
@@ -40,7 +40,7 @@ Default = empty list
 | *`automationedacontroller_gunicorn_workers`* | Number of workers for the API served through gunicorn.
 
 Default = (# of cores or threads) * 2 + 1
-| *`automationedacontroller_max_running_activations`* | The number of running activations per worker.
+| *`automationedacontroller_max_running_activations`* | The number of maximum activations running concurrently per node.
 
 Default = 12
 | *`automationedacontroller_pg_database`* | The Postgres database used by {EDAController}.
