Add requirements for UBI CDN FQDN
Minor correction to remove legacy entries.
Note that ^ should be AAP-21282

UBI CDN FQDN not listed as a requirement for EEs

https://issues.redhat.com/browse/AAP-21282

--- a/downstream/modules/platform/con-building-an-execution-environment-in-a-disconnected-environment.adoc
+++ b/downstream/modules/platform/con-building-an-execution-environment-in-a-disconnected-environment.adoc
@@ -19,9 +19,9 @@ link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_pl
 * Red Hat does not have an IP list for the container registry domains or cdn-ubi.redhat.com as for cdn.redhat.com. 
 To firewall off the registry and/or UBI repositories, use a proxy (e.g. squid) and allow-list the following domains:
 
-* `registry.access.redhat.com`
+//* `registry.access.redhat.com`
 * `registry.redhat.io`
-* `registry.connect.redhat.com`
+//* `registry.connect.redhat.com`
 * `sso.redhat.com`
 * `cdn-ubi.redhat.com`
 * `cdn.quay.io`
