Create section 10 of controller API overview
Adding content for section 10

Create section 10 of the Automation Controller API Overview
https://issues.redhat.com/browse/AAP-21678

Affects `titles/controller-api-guide`

--- a/downstream/modules/platform/proc-controller-api-session-auth.adoc
+++ b/downstream/modules/platform/proc-controller-api-session-auth.adoc
@@ -35,11 +35,11 @@ curl -X POST -H 'Content-Type: application/x-www-form-urlencoded' \
 --cookie 'csrftoken=K580zVVm0rWX8pmNylz5ygTPamgUJxifrdJY0UDtMMoOis5Q1UOxRmV9918BUBIN' \
 https://<awx-host>/api/login/ -k -D - -o /dev/null
 ----
-+
-All of this is done by the {ControllerName} when you log in to the UI or API in the browser, and you should only use it when authenticating in the browser. 
-For programmatic integration with {ControllerName}, see link:ADD XREF OAuth2 Token Authentication.
 
-A typical response looks like the following:
+All of this is done by {ControllerName} when you log in to the UI or API in the browser, and you should only use it when authenticating in the browser. 
+For programmatic integration with {ControllerName}, see xref:controller-api-oauth2-token[OAuth2 token authentication].
+
+The following is an example of a typical response:
 
 [literal, options="nowrap" subs="+attributes"]
 ----
