--- a/downstream/assemblies/platform/assembly-controller-api-auth-methods.adoc
+++ b/downstream/assemblies/platform/assembly-controller-api-auth-methods.adoc
@@ -5,12 +5,14 @@
 You can use the following authentication methods in the API:
 
 * xref:controller-api-session-auth[Session authentication]
-* Basic authentication
-* OAuth 2 token authentication
-* Single Sign-On authentication
+* xref:controller-api-basic-auth[Basic authentication]
+* xref:controller-api-oauth2-token[OAuth 2 token authentication]
+* xref:controller-api-sso-auth[Single sign-on authentication]
 
 {ControllerNameStart} is designed for organizations to centralize and control their automation with a visual dashboard for out-of-the box control while providing a REST API to integrate with your other tools on a deeper level. 
 {ControllerNameStart} supports several authentication methods to make it easy to embed {ControllerName} into existing tools and processes to help ensure the right people can access controller resources.
 
 include::platform/proc-controller-api-session-auth.adoc[leveloffset=+1]
-
+include::platform/con-controller-api-basic-auth.adoc[leveloffset=+1]
+include::platform/con-controller-api-oauth2-token.adoc[leveloffset=+1]
+include::platform/con-controller-api-sso-auth.adoc[leveloffset=+1]
