--- a/downstream/modules/platform/con-controller-api-oauth2-token.adoc
+++ b/downstream/modules/platform/con-controller-api-oauth2-token.adoc
@@ -16,11 +16,10 @@ The different methods for obtaining OAuth2 access tokens in {ControllerName} inc
 * Application token: Implicit grant type
 * Application token: Authorization Code grant type
 
-
 A user needs to create an OAuth 2 token in the API or in the *Users* > *Tokens* tab of the {ControllerName} UI.
 For more information about creating tokens through the UI, see link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/2.4/html-single/automation_controller_user_guide/index#proc-controller-user-tokens[Users - Tokens].
 
-For the purposes of this example, use the PAT method for creating a token in the API.
+For the purpose of this example, use the PAT method for creating a token in the API.
 After you create it, you can set the scope.
 
 [NOTE]
