--- a/downstream/assemblies/platform/assembly-controller-api-auth-methods.adoc
+++ b/downstream/assemblies/platform/assembly-controller-api-auth-methods.adoc
@@ -10,7 +10,8 @@ You can use the following authentication methods in the API:
 * xref:controller-api-sso-auth[Single sign-on authentication]
 
 {ControllerNameStart} is designed for organizations to centralize and control their automation with a visual dashboard for out-of-the box control while providing a REST API to integrate with your other tools on a deeper level. 
-{ControllerNameStart} supports several authentication methods to make it easy to embed {ControllerName} into existing tools and processes to help ensure the right people can access controller resources.
+{ControllerNameStart} supports several authentication methods to make it easy to embed {ControllerName} into existing tools and processes. 
+This ensures that the right people can access its resources.
 
 include::platform/proc-controller-api-session-auth.adoc[leveloffset=+1]
 include::platform/con-controller-api-basic-auth.adoc[leveloffset=+1]
