--- a/downstream/modules/platform/proc-controller-api-session-auth.adoc
+++ b/downstream/modules/platform/proc-controller-api-session-auth.adoc
@@ -1,8 +1,8 @@
 [id="controller-api-session-auth"]
 
-= Session authentication
+= Using session authentication
 
-You can use session authentication when logging in directly to {ControllerName}'s API or UI to manually create resources, such as inventories, projects, and job templates and start jobs in the browser. 
+You can use session authentication when logging in directly to the {ControllerName}'s API or UI to manually create resources, such as inventories, projects, and job templates and start jobs in the browser. 
 With this method, you can remain logged in for a prolonged period of time, not just for that HTTP request. 
 For example, when browsing the API or UI in a browser such as Chrome or Mozilla Firefox. 
 When a user logs in, a session cookie is created, this means that the they can remain logged in when navigating to different pages within {ControllerName}. 
@@ -36,7 +36,7 @@ curl -X POST -H 'Content-Type: application/x-www-form-urlencoded' \
 https://<awx-host>/api/login/ -k -D - -o /dev/null
 ----
 
-All of this is done by {ControllerName} when you log in to the UI or API in the browser, and you should only use it when authenticating in the browser. 
+All of this is done by {ControllerName} when you log in to the UI or API in the browser, and you must only use it when authenticating in the browser. 
 For programmatic integration with {ControllerName}, see xref:controller-api-oauth2-token[OAuth2 token authentication].
 
 The following is an example of a typical response:
