Peer review edits

--- a/downstream/modules/platform/con-controller-api-sso-auth.adoc
+++ b/downstream/modules/platform/con-controller-api-sso-auth.adoc
@@ -2,12 +2,12 @@
 
 = Single sign-on authentication
 
-Single sign-on (SSO) authentication methods are different from other methods because the authentication of the user happens external to {ControllerName}, such as Google SSO, Microsoft Azure SSO, SAML, or GitHub. 
+Single sign-on (SSO) authentication methods are different from other methods because the authentication of the user happens external to {ControllerName}, such as Google SSO, {Azure} SSO, SAML, or GitHub. 
 For example, with GitHub SSO, GitHub is the single source of truth, which verifies your identity based on the username and password you gave {ControllerName}.
 
 You can configure SSO authentication by using {ControllerName} inside a large organization with a central Identity Provider. 
 Once you have configured an SSO method in {ControllerName}, an option for that SSO is available on the login screen. 
-If you click that option, it redirects you to the Identity Provider, in this case GitHub, where you present your credentials. If the Identity Provider verifies you successfully, {ControllerName} makes a user linked to your GitHub user (if this is your first time logging in with this SSO method), and log you in.
+If you click that option, it redirects you to the Identity Provider, in this case GitHub, where you present your credentials. If the Identity Provider verifies you successfully, {ControllerName} makes a user linked to your GitHub user (if this is your first time logging in with this SSO method), and logs you in.
 
 .Additional resources
 
