--- a/downstream/assemblies/platform/assembly-controller-instances.adoc
+++ b/downstream/assemblies/platform/assembly-controller-instances.adoc
@@ -2,7 +2,7 @@
 
 = Managing Capacity With Instances
 
-Scaling your automation mesh is available on OpenShift deployments of {PlatformName} and is possible through adding or removing nodes from your cluster dynamically, using the *Instances* resource of the {ControllerName} UI, without running the installation script.
+Scaling your {AutomationMesh} is available on OpenShift deployments of {PlatformName} and is possible through adding or removing nodes from your cluster dynamically, using the *Instances* resource of the {ControllerName} UI, without running the installation script.
 
 Instances serve as nodes in your mesh topology. 
 {AutomationMeshStart} enables you to extend the footprint of your automation. 
