adds eda controller ssl variables to variable index in installation guide

--- a/downstream/modules/platform/ref-eda-controller-variables.adoc
+++ b/downstream/modules/platform/ref-eda-controller-variables.adoc
@@ -61,4 +61,10 @@ Default = `automationedacontroller`.
 | *`automationedacontroller_rq_workers`* | Number of Redis Queue (RQ) workers used by {EDAcontroller}. RQ workers are Python processes that run in the background.
 
 Default =  (# of cores or threads) * 2 + 1
+| *`automationedacontroller_ssl_cert`* | _Optional_
+
+`/root/ssl_certs/eda.example.com.crt`
+| *`automationedacontroller_ssl_key`* | _Optional_
+
+`/root/ssl_certs/eda.example.com.key`
 |====
