--- a/downstream/modules/platform/ref-eda-controller-variables.adoc
+++ b/downstream/modules/platform/ref-eda-controller-variables.adoc
@@ -63,8 +63,12 @@ Default = `automationedacontroller`.
 Default =  (# of cores or threads) * 2 + 1
 | *`automationedacontroller_ssl_cert`* | _Optional_
 
-`/root/ssl_certs/eda.example.com.crt`
+`/root/ssl_certs/eda._<example>_.com.crt`
+
+Same as `automationhub_ssl_cert` but for {EDAcontroller} UI and API.
 | *`automationedacontroller_ssl_key`* | _Optional_
 
-`/root/ssl_certs/eda.example.com.key`
+`/root/ssl_certs/eda._<example>_.com.key`
+
+Same as `automationhub_server_ssl_key` but for {EDAcontroller} UI and API.
 |====
