Add RP requirements in Azure docs

--- a/stories/assembly-azure-install.adoc
+++ b/stories/assembly-azure-install.adoc
@@ -23,6 +23,7 @@ ifdef::context[:parent-context: {context}]
 // Prerequisites for Azure tenancies (tenancy resource limits, use of Azure private features, etc.). Link to Infrastructure modules
 
 include::topics/proc-azure-resource-quotas.adoc[leveloffset=+2]
+include::topics/proc-azure-resource-providers.adoc[leveloffset=+2]
 
 include::topics/proc-azure-create-service-principal.adoc[leveloffset=+1]
 
