AAP-20863: Adds EDA controller variables to procedure for changing SSL certification (#1130)
* Adds EDA controller variables to procedure for changing SSL certification

* adds eda controller ssl variables to variable index in installation guide

* edits based on technical SME feedback

--- a/downstream/modules/platform/ref-eda-controller-variables.adoc
+++ b/downstream/modules/platform/ref-eda-controller-variables.adoc
@@ -60,5 +60,15 @@ Default = `5432`.
 Default = `automationedacontroller`.
 | *`automationedacontroller_rq_workers`* | Number of Redis Queue (RQ) workers used by {EDAcontroller}. RQ workers are Python processes that run in the background.
 
-Default =  2 * (# of cores or threads) + 1
+Default =  (# of cores or threads) * 2 + 1
+| *`automationedacontroller_ssl_cert`* | _Optional_
+
+`/root/ssl_certs/eda._<example>_.com.crt`
+
+Same as `automationhub_ssl_cert` but for {EDAcontroller} UI and API.
+| *`automationedacontroller_ssl_key`* | _Optional_
+
+`/root/ssl_certs/eda._<example>_.com.key`
+
+Same as `automationhub_server_ssl_key` but for {EDAcontroller} UI and API.
 |====
