--- a/downstream/assemblies/platform/assembly-custom-inventory-scripts.adoc
+++ b/downstream/assemblies/platform/assembly-custom-inventory-scripts.adoc
@@ -21,6 +21,8 @@ If you are migrating to {ExecEnvShort}s, see:
 * link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/2.4/html/red_hat_ansible_automation_platform_automation_mesh_guide/design-patterns[Automation mesh design patterns].
 * link:https://docs.ansible.com/automation-controller/4.4/html/upgrade-migration-guide/upgrade_to_ees.html#mesh-topology-ee[Mesh Topology] in the _Ansible Automation Platform Upgrade and Migration Guide_ to validate your topology.
 
-For more information on automation mesh, see the link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/2.4/html/red_hat_ansible_automation_platform_automation_mesh_guide/index[Red Hat Ansible Automation Mesh Guide].
+For more information about {AutomationMesh} on a VM-based installation, see the link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/2.4/html/red_hat_ansible_automation_platform_automation_mesh_guide_for_vm-based_installations/index[{PlatformName} {AutomationMesh} guide for VM-based installations].
+
+For more information about {AutomationMesh} on an operator-based installation, see the link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/2.4/html/red_hat_ansible_automation_platform_automation_mesh_for_operator-based_installations/index[{PlatformName} {AutomationMesh} for operator-based installations].
 
 If you already have a mesh topology set up and want to view node type, node health, and specific details about each node, see xref:assembly-controller-topology-viewer[Topology Viewer].
