--- a/downstream/modules/platform/con-why-automation-mesh.adoc
+++ b/downstream/modules/platform/con-why-automation-mesh.adoc
@@ -12,4 +12,8 @@ When upgrading from version 1.x to the latest version of {PlatformNameShort}, yo
 
 * For instructions on how to migrate from isolated nodes to execution nodes, see the link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_upgrade_and_migration_guide/index[Red Hat Ansible Automation Platform Upgrade and Migration Guide].
 
-* For information about automation mesh and the various ways to design your automation mesh for your environment, see the link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_automation_mesh_guide/index[Red Hat Ansible Automation Platform automation mesh guide].
+* For information about automation mesh and the various ways to design your automation mesh for your environment:
+
+** For a VM-based installation, see the link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/2.4/html/red_hat_ansible_automation_platform_automation_mesh_guide_for_vm-based_installations/index[{PlatformName} {AutomationMesh} guide for VM-based installations].
+
+** For an operator-based installation, see the link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/2.4/html/red_hat_ansible_automation_platform_automation_mesh_for_operator-based_installations/index[{PlatformName} {AutomationMesh} for operator-based installations].
