--- a/lightspeed/modules/proc_troubleshooting-lightspeed-config.adoc
+++ b/lightspeed/modules/proc_troubleshooting-lightspeed-config.adoc
@@ -17,7 +17,7 @@ When you enter the Watsonx Code Assistant (WCA) API key, authentication fails an
 
 `IBM Cloud API key is invalid`
 
-{LightspeedShortName} verifies the WCA API key by generating an associated access token. To resolve the error, ensure that you have not accidentally included any extra spaces when obtaining the WCA API key from {ibmwatsonxcodeassistant}. If you still cannot upload the WCA key, contact IBM support. 
+{LightspeedShortName} verifies the WCA API key by generating an associated access token. To resolve the error, ensure that you have not accidentally included any extra spaces when obtaining the WCA API key from {ibmwatsonxcodeassistant}. If you still cannot upload the WCA key, contact link:https://cloud.ibm.com/docs/get-support?topic=get-support-open-case[IBM Support].
 
 == Cannot configure the model ID due to authentication failure
 
