--- a/downstream/modules/platform/proc-controller-access-topology-viewer.adoc
+++ b/downstream/modules/platform/proc-controller-access-topology-viewer.adoc
@@ -22,9 +22,9 @@ To reset the view to its default view, click the *Reset zoom* (image:reset.png[R
 
 . Refer to the *Legend* to identify the type of nodes that are represented. 
 +
-For VM-based installations, see link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/2.4/html/red_hat_ansible_automation_platform_automation_mesh_guide_for_vm-based_installations/assembly-planning-mesh#con-automation-mesh-node-types[Control and execution planes] 
+For VM-based installations, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_automation_mesh_guide_for_vm-based_installations/assembly-planning-mesh#con-automation-mesh-node-types[Control and execution planes] 
 +
-For operator-based installations, see link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/2.4/html/red_hat_ansible_automation_platform_automation_mesh_for_operator-based_installations/assembly-planning-mesh#con-automation-mesh-node-types[Control and execution planes] 
+For operator-based installations, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_automation_mesh_for_operator-based_installations/assembly-planning-mesh#con-automation-mesh-node-types[Control and execution planes] 
 +
 for more information on each type of node.
 +
