--- a/stories/topics/proc-azure-resource-providers.adoc
+++ b/stories/topics/proc-azure-resource-providers.adoc
@@ -25,6 +25,6 @@ The resource provider defines the Azure resources you can deploy in your Azure s
 "Microsoft.Solutions"
 ----
 
-== How to register Azure Resource Providers
+== Registering Azure Resource Providers
 
 Please, read the link:https://learn.microsoft.com/en-us/azure/azure-resource-manager/management/resource-providers-and-types#register-resource-provider[Azure documentation] on how to register Azure Resource Providers.
