--- a/stories/topics/proc-azure-resource-providers.adoc
+++ b/stories/topics/proc-azure-resource-providers.adoc
@@ -27,4 +27,4 @@ The resource provider defines the Azure resources you can deploy in your Azure s
 
 == Registering Azure Resource Providers
 
-Please, read the link:https://learn.microsoft.com/en-us/azure/azure-resource-manager/management/resource-providers-and-types#register-resource-provider[Azure documentation] on how to register Azure Resource Providers.
+To  register Azure Resource Providers, follow the instructions in the link:https://learn.microsoft.com/en-us/azure/azure-resource-manager/management/resource-providers-and-types#register-resource-provider[How to manage resources section] of the Azure documentation.
