--- a/stories/topics/proc-azure-resource-providers.adoc
+++ b/stories/topics/proc-azure-resource-providers.adoc
@@ -1,6 +1,6 @@
 [id="proc-azure-resource-providers{context}"]
 
-= Azure resource providers required
+= Azure resource providers
 
 Microsoft uses Azure resource providers as a set of REST operations that enable functionality for a specific Azure service in an Azure subscription. For example, the Key Vault service consists of a resource provider named Microsoft.KeyVault. The resource provider defines REST operations for managing vaults, secrets, keys, and certificates.
 
