--- a/stories/topics/proc-azure-resource-providers.adoc
+++ b/stories/topics/proc-azure-resource-providers.adoc
@@ -6,7 +6,7 @@ Microsoft uses Azure resource providers as a set of REST operations that enable 
 
 The resource provider defines the Azure resources you can deploy in your Azure subscription.
 
-== List of Azure Resource Providers
+== Required Azure Resource Providers
 
 {AAPonAzureName} installation requires specific Azure Resource Providers registered in your Azure subscription before you attempt a new installation:
 
