--- a/downstream/modules/platform/ref-controller-smart-inventories.adoc
+++ b/downstream/modules/platform/ref-controller-smart-inventories.adoc
@@ -57,6 +57,7 @@ In some situations, you can modify the following:
 
 * A new Host created manually on Inventory with Inventory sources. 
 * Groups that were created as a result of inventory source synchronizations.
+* Variables on Host and Group are not changeable, even as the local System Administrator.
 
 Hosts associated with the Smart Inventory are manifested at view time.
 If the results of a Smart Inventory contains more than one host with identical hostnames, only one of the matching hosts is included as part of the Smart Inventory, ordered by Host ID.
