--- a/downstream/assemblies/platform/assembly-controller-credentials.adoc
+++ b/downstream/assemblies/platform/assembly-controller-credentials.adoc
@@ -59,6 +59,7 @@ include::platform/ref-controller-credential-aap.adoc[leveloffset=+2]
 include::platform/ref-controller-credential-satellite.adoc[leveloffset=+2]
 include::platform/ref-controller-credential-virtualization.adoc[leveloffset=+2]
 include::platform/ref-controller-credential-source-control.adoc[leveloffset=+2]
+include::platform/ref-controller-credential-terraform.adoc[leveloffset=+2]
 include::platform/ref-controller-credential-thycotic-vault.adoc[leveloffset=+2]
 include::platform/ref-controller-credential-thycotic-server.adoc[leveloffset=+2]
 include::platform/ref-controller-credential-vault.adoc[leveloffset=+2]
