Replace plain text with attributes for content in the builder module
This PR is specific to the 2.3 branch/version of our docs. The `main` PR is #1036.

Affects the following title: `builder`.

Replace plain-text with attributes where appropriate

https://issues.redhat.com/browse/AAP-19894

--- a/downstream/modules/builder/con-container_file.adoc
+++ b/downstream/modules/builder/con-container_file.adoc
@@ -2,7 +2,7 @@
 
 = Containerfile
 
-Once your definition file is created, Ansible Builder reads and validates it, then creates a `Containerfile`, and finally passes the `Containerfile` to Podman to package and create your automation execution environment image using the following instructions:
+Once your definition file is created, {Builder} reads and validates it, then creates a `Containerfile`, and finally passes the `Containerfile` to Podman to package and create your {ExecEnvNameSing} image using the following instructions:
 
 . Fetch base image
 . In the ephemeral copy of base image, collections are downloaded and the list of declared Python and system dependencies, if any, are collected for later.
