--- a/downstream/modules/builder/proc-push-execenv-to-hub.adoc
+++ b/downstream/modules/builder/proc-push-execenv-to-hub.adoc
@@ -1,6 +1,6 @@
 [id="proc-push-execenv-to-hub"]
 
-= Pushing an execution environment container image to {HubName}
+= Pushing an {ExecEnvShort} container image to {HubName}
 
 .Prerequisite
 * You have {ExecEnvShort} permissions in {HubName} allowing you to create new containers or push to an existing container.
