--- a/downstream/modules/builder/con-about-ee.adoc
+++ b/downstream/modules/builder/con-about-ee.adoc
@@ -11,12 +11,12 @@ Base the file name and the ID on the module title. For example:
 
 [role="_abstract"]
 
-{ExecEnvNameStart} are container images on which all automation in {PlatformName} is run. {ExecEnvNameStart} create a common language for communicating automation dependencies, and provide a standard way to build and distribute the automation environment.
+{ExecEnvNameStart} are container images on which all automation in {PlatformName} is run. {ExecEnvNameStart} create a common language for communicating automation dependencies, and provide a standard way to build and distribute the automation environment.
 
 An {ExecEnvNameSing} is expected to contain the following:
 
 * Ansible 2.9 or Ansible Core 2.11-2.13
 * Python 3.8-3.10
-* Ansible Runner
+* {Runner}
 * Ansible content collections
 * Collection, Python, or system dependencies
