--- a/downstream/assemblies/platform/assembly-controller-credentials.adoc
+++ b/downstream/assemblies/platform/assembly-controller-credentials.adoc
@@ -31,8 +31,9 @@ To pass the key from {ControllerName} to SSH, the key must be decrypted before i
 {ControllerNameStart} uses that pipe to send the key to SSH, so that the key is never written to disk.
 If passwords are used, {ControllerName} handles them by responding directly to the password prompt and decrypting the password before writing it to the prompt.
 
-//include::platform/ref-controller-credentials-getting-started.adoc[leveloffset=+1]
+//Removed as part of editorial review - include::platform/ref-controller-credentials-getting-started.adoc[leveloffset=+1]
 include::platform/proc-controller-create-credential.adoc[leveloffset=+1]
+include::platform/proc-controller-add-users-job-templates.adoc[leveloffset=+1]
 include::platform/ref-controller-credential-types.adoc[leveloffset=+1]
 include::platform/ref-controller-credential-aws.adoc[leveloffset=+2]
 include::platform/ref-controller-credential-galaxy-hub.adoc[leveloffset=+2]
