--- a/downstream/modules/platform/proc-controller-create-credential.adoc
+++ b/downstream/modules/platform/proc-controller-create-credential.adoc
@@ -11,7 +11,10 @@ ifdef::controller-UG[]
 Credentials added to a team are made available to all members of the team. 
 You can also add credentials to individual users.
 
-As part of the initial setup, two credentials are available for your use: Demo Credential and Ansible Galaxy. Use the Ansible Galaxy credential as a template. You can copy this credential, but not edit it. Add more credentials as needed.
+As part of the initial setup, two credentials are available for your use: Demo Credential and Ansible Galaxy. 
+Use the Ansible Galaxy credential as a template. 
+You can copy this credential, but not edit it. 
+Add more credentials as needed.
 endif::controller-UG[]
 
 .Procedure
@@ -46,7 +49,7 @@ organization.
 +
 //image:credential-types-drop-down-menu.png[Credential types]
 
-. Enter the appropriate details depending on the type of credential selected, as described in xref:ref-controller-credential-types[Credential Types].
+. Enter the appropriate details depending on the type of credential selected, as described in xref:ref-controller-credential-types[Credential types].
 . Click btn:[Save].
 
 
