Editorial changes to Chaps 1-8 Controller UG
Corrections

Make edits to Controller User Guide

https://issues.redhat.com/browse/AAP-21967

--- a/downstream/modules/platform/proc-controller-importing-subscriptions.adoc
+++ b/downstream/modules/platform/proc-controller-importing-subscriptions.adoc
@@ -37,8 +37,10 @@ You can log in over time and retrieve new subscriptions if you have renewed.
 . Click btn:[Next] to proceed to the *Tracking and Insights* page. 
 +
 Tracking and insights collect data to help Red Hat improve the product and deliver a better user experience. 
-For more information about data collection, see link:{BaseURL}/red_hat_ansible_automation_platform/2.4/html-single/automation_controller_administration_guide/index#controller-usability-analytics-data-collection[Usability Analytics and Data Collection]. 
+For more information about data collection, see link:{BaseURL}/red_hat_ansible_automation_platform/2.4/html-single/automation_controller_administration_guide/index#controller-usability-analytics-data-collection[Usability Analytics and Data Collection] of the _{ControllerAG}_.
++ 
 This option is checked by default, but you can opt out of any of the following:
+
 * *User analytics*. Collects data from the controller UI.
 * *Insights Analytics*. Provides a high level analysis of your automation with {ControllerName}. 
 It helps you to identify trends and anomalous use of the controller. 
@@ -47,11 +49,7 @@ For more information, see the link:{BaseURL}/red_hat_ansible_automation_platform
 +
 [NOTE]
 ====
-<<<<<<< HEAD
-You can change your analytics data collection preferences at any time, as described in the link:{BaseURL}/red_hat_ansible_automation_platform/2.4/html-single/automation_controller_administration_guide/index#controller-usability-analytics-data-collection[Usability Analytics and Data Collection] section.
-=======
 You can change your analytics data collection preferences at any time.
->>>>>>> 26a4673b (Editorial changes to Chaps 1-8 Controller UG)
 ====
 +
 . After you have specified your tracking and Insights preferences, click btn:[Next] to proceed to the End User Agreement.
