fixing some minor typos

--- a/downstream/modules/platform/proc-use-controller-resource-operator.adoc
+++ b/downstream/modules/platform/proc-use-controller-resource-operator.adoc
@@ -2,7 +2,7 @@
 
 = Using {ControllerName} Resource Operator 
 
-The {ControllerName} Resource Operator itself does not do anything until the user creates an object. So as soon as the user creates an AutomationControllerProject or AnsibleJob resource, the resource operator will start processing that object. 
+The {ControllerName} Resource Operator itself does not do anything until the user creates an object. As soon as the user creates an AutomationControllerProject or AnsibleJob resource, the resource operator will start processing that object. 
 
 .Prerequisites
 * Install the Kubernetes-based cluster of your choice
